--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
                 title: "Sistema de Alertas",
                 description: "Sistema de alerta preventivo quando recebermos notas detratoras e neutras",
                 responsible: "Jô",
-                status: "fazendo",
+                status: "feito",
                 brand: "Victa"
             },
             {
@@ -844,7 +844,7 @@
                 title: "Reuniões de Análise",
                 description: "Reuniões semanais de 15 minutos para análise dos resultados",
                 responsible: "Jô",
-                status: "a-fazer",
+                status: "fazendo",
                 brand: "Victa"
             },
             {
