--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                     </div>
                 </div>
                 <div class="nps-score excellent">
-                    <span>🎯 Excelente Performance</span>
+                    <span>🎯 boa Performance *baixos volumes </span>
                 </div>
                 <div class="trend-indicator trend-up">
                     ↗️ Tendência positiva consistente
@@ -852,6 +852,27 @@
                 description: "Iniciar os ritos com o time selecionado de representantes",
                 responsible: "Jô",
                 status: "a-fazer",
+                brand: "Victa"
+            }
+             {
+                title: "Análise comparativa",
+                description: "Apresentar o relatório comparativo entre Mirante e Altavista",
+                responsible: "Jô",
+                status: "a-fazer",
+                brand: "Victa"
+            }
+         {
+                title: "Análise comparativa",
+                description: "Analisar ponto a ponto do relatório e indicar se houve solução para as obras futuras",
+                responsible: "Gabriel",
+                status: "feito",
+                brand: "Victa"
+            }
+         {
+                title: "Taxas de Respostas",
+                description: "Elaborar ações de reenvio da pesquisa para aumento de taxa de respostas",
+                responsible: "Natália",
+                status: "feito",
                 brand: "Victa"
             }
         ];
