--- a/index.html
+++ b/index.html
@@ -399,34 +399,7 @@
             </div>
         </div>
 
-        <div class="metrics-grid">
-            <div class="metric-card diagonal">
-                <div class="metric-title">
-                    <span class="brand-badge diagonal">Diagonal</span>
-                    NPS Satisfação do Cliente
-                </div>
-                <div class="metric-values">
-                    <div class="value-item">
-                        <div class="value-label">Meta</div>
-                        <div class="value-number">80</div>
-                    </div>
-                    <div class="value-item">
-                        <div class="value-label">Abril</div>
-                        <div class="value-number positive">89</div>
-                    </div>
-                </div>
-                <div class="nps-score excellent">
-                    <span>🎯 boa Performance *baixos volumes </span>
-                </div>
-                <div class="trend-indicator trend-up">
-                    ↗️ Tendência positiva consistente
-                </div>
-                <div class="progress-bar">
-                    <div class="progress-fill" style="width: 100%; background: linear-gradient(90deg, #3498db, #2ecc71);"></div>
-                </div>
-            </div>
-
-            <div class="metric-card victa">
+                   <div class="metric-card victa">
                 <div class="metric-title">
                     <span class="brand-badge victa">Victa</span>
                     NPS Satisfação do Cliente
@@ -848,6 +821,13 @@
                 brand: "Victa"
             },
             {
+                title: "Ritos com Guardiões",
+                description: "Iniciar os ritos com o time selecionado de representantes",
+                responsible: "Jô",
+                status: "a-fazer",
+                brand: "Victa"
+            }
+                {
                 title: "Ritos com Guardiões",
                 description: "Iniciar os ritos com o time selecionado de representantes",
                 responsible: "Jô",
