--- a/index.html
+++ b/index.html
@@ -424,6 +424,7 @@
                 </div>
               <div class="progress-bar">
     <div class="progress-fill" style="width: 100%; background: linear-gradient(90deg, #888888, #cccccc);"></div>
+        </div>
 </div>
 
             </div>
