--- a/index.html
+++ b/index.html
@@ -417,16 +417,14 @@
                     </div>
                 </div>
                 <div class="nps-score excellent">
-                    <span>🎯 Performance em linha</span>
+                    <span>🎯 Excelente Performance</span>
                 </div>
                 <div class="trend-indicator trend-up">
-                    ↗️ Tendência influenciada por alta margem de erro
+                    ↗️ Tendência positiva consistente
                 </div>
-              <div class="progress-bar">
-    <div class="progress-fill" style="width: 100%; background: linear-gradient(90deg, #888888, #cccccc);"></div>
-        </div>
-</div>
-
+                <div class="progress-bar">
+                    <div class="progress-fill" style="width: 100%; background: linear-gradient(90deg, #3498db, #2ecc71);"></div>
+                </div>
             </div>
 
                    <div class="metric-card victa">
